ManifoldCF Change Log
$Id$

======================= 2.14-dev =====================

CONNECTORS-1609: SharePoint: Treat document fetch 403 and 503 errors as meaning
insufficient permissions, and skip the document.
(Karl Wright)

CONNECTORS-1605: HTML-extractor: Use body tag if specified tag is not available.
(Olivier Tavard)

======================= Release 2.13 =====================

CONNECTORS-1498: Redevelop the jcifs connector to use the newer jcifs-ng.jar.
(Karl Wright)

CONNECTORS-1588: Apply override of jcifs properties only if they are not
already specified.
(Cihad Guzel)

CONNECTORS-1579: Fix for JDBC connector's incorrect tracking of rejected
documents.
(Donald Van den Driessche, Karl Wright)

CONNECTORS-1535: Modify documentum server script on Linux because otherwise
dfc.properties can't be found.
(James Thomas)

CONNECTORS-1565: Upgrades commons-collections to 3.2.2. Please consider instructions
in https://commons.apache.org/proper/commons-collections/security-reports.html if your
custom connector makes use of the org.apache.commons.collections.functors package.
(Markus Schuch)

CONNECTORS-1506: Add fixes for CSS preservation when opening in new tab in UI.
(Kishore Kumar)

======================= Release 2.12 =====================

CONNECTORS-1562: HopDeleteDeps table was using NULL values instead of empty
strings, but nothing else knew about this and therefore all queries involving invalidation
that used empty strings would not work as expected.  This was a long-standing problem,
in effect since at least 2012.
(Karl Wright, Tim Steenbeke)

CONNECTORS-1522: Add SSL and basic auth support to ElasticSearch connector.
(Karl Wright, Steph van Schwalkwyk)

CONNECTORS-1556: Modify retry strategy for Tika Service connector.
(Karl Wright)

CONNECTORS-1542:  Add switch to let user select the Version Policy to be applied to ingested documents
(Piergiorgio Lucidi)

CONNECTORS-1548: CMIS output connector test fails with versioning state error
(Piergiorgio Lucidi)
